--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
-                    <h2>About WeLab Bootcamp</h2>
+                    <h2>About WebLab Bootcamp</h2>
                     <hr>
                 </div>
             </div>
@@ -81,11 +81,19 @@
                 </div>
                 <div class="col-md-2 text-center">
                     <div class="service-item">
-                        <i class="service-icon fa fa-magnet"></i>
+                        <i class="service-icon fa fa-pencil"></i>
                         <h4>Course Curriculum</h4>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                     </div>
                 </div>
+                <div class="col-md-2 text-center">
+                    <div class="service-item">
+                        <i class="service-icon fa fa-paperclip"></i>
+                        <h4>Web Resources</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    </div>
+                </div>
+                <!--
                 <div class="col-md-2 text-center">
                     <div class="service-item">
                         <i class="service-icon fa fa-shield"></i>
@@ -93,9 +101,10 @@
                         <p>Planning a time travel trip to the middle ages? Preserve the space time continuum by blending in with period accurate armor and weapons.</p>
                     </div>
                 </div>
+                -->
                 <div class="col-md-2 text-center">
                     <div class="service-item">
-                        <i class="service-icon fa fa-pencil"></i>
+                        <i class="service-icon fa fa-users"></i>
                         <h4>The Students</h4>
                         <p>We've been voted the best pencil sharpening service for 10 consecutive years. If you have a pencil that feels dull, we'll get it sharp!</p>
                     </div>
@@ -128,7 +137,7 @@
                         <a href="#">
                             <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
                         </a>
-                        <h4>Cityscape</h4>
+                        <h4>Student</h4>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
@@ -136,7 +145,7 @@
                         <a href="#">
                             <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
                         </a>
-                        <h4>Is That On Fire?</h4>
+                        <h4>Student</h4>
                     </div>
                 </div>
             </div>
@@ -146,7 +155,7 @@
                         <a href="#">
                             <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
                         </a>
-                        <h4>Stop Sign</h4>
+                        <h4>Student</h4>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
@@ -154,7 +163,7 @@
                         <a href="#">
                             <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
                         </a>
-                        <h4>Narrow Focus</h4>
+                        <h4>Student</h4>
                     </div>
                 </div>
             </div>
