--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+title: "Weblab home"
+---
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -177,7 +181,31 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h3>~Featured Blog Posts Here~</h3>
-                    <br><br><br><br><br><br><br><br><br><br><br><br>    
+                    <br><br><br><br><br><br><br><br><br><br><br><br>
+                    <h2>Posts</h2>
+                    <table class="table table-striped">
+                        <tbody>
+                        {% for post in site.posts %}
+                        <tr>
+                            <td>
+                                <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+                                <i>{{ post.summary }}</i>
+
+                                <p>
+                                    <small>
+                                        {{ post.date | date: "%B %e, %Y" }} - {{ post.category }} -
+                                        {% for tag in post.tags %}
+                                        <a href="/tags/{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
+                                        {% if forloop.last != true %}
+                                        {% endif %}
+                                        {% endfor %} .
+                                    </small>
+                                </p>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>  
                     <!-- 
                     <a href="#" class="btn btn-lg btn-default">Click Me!</a>
                     <a href="#" class="btn btn-lg btn-primary">Look at Me!</a> 
