setting up tags and category pages along with sub blogs

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
-layout: default
+layout: home
 title: "Weblab Home"
 ---
 
 {% include portfolios.html %}
 {% include featured_posts.html %}
+{% include callout.html %}
