--- a/categories.html
+++ b/categories.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Categories
+
 ---
 <h2>Categories:</h2>
 <ul>
@@ -15,7 +16,9 @@ title: Categories
     <ul>
     {% for posts in category %}
       {% for post in posts %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% if post.url %}
+          <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endif %}
       {% endfor %}
     {% endfor %}
     </ul>
