new photo and styling changes

--- a/students/spring2014/jcyoder/index.html
+++ b/students/spring2014/jcyoder/index.html
@@ -15,22 +15,22 @@ title: home
 		
         <header>
 			
-			<h1>Janet Yoder's Portfolio</h1>
+			<h1 class="title">Janet Yoder's Portfolio</h1>
 			
         </header>
         
    <!--     {% include nav.html %} -->
 		
 		<div class="intro">
-			<img class="janet" src="images/JanetYoder.jpg" alt="Photo of Janet"/>
+			<img class="janet" src="images/Janet.jpg" alt="Photo of Janet"/>
 				<h1>About Me...</h1>
 				<p>
-					Hello!  I am a Colorado native who grew up in Arvada.  I came to Northern Colorado in 1990 
-					and received a Bachelors in Mathematics with an Emphasis in Computer Science.  
-					I have spent my entire career working on software development teams in a variety of different
-					roles. In the later part of my career, I spent my time in Product/Program Management and Scrum Master
-					positions. Since I miss being in a more technical role, I would like to transition my career into Web development.  WebLab - A Web Development Boot Camp, 
-					FRCC has given me this exciting opportunity to do just that!
+					Hello! Welcome to my portfolio page.  I am a Colorado native, born in Denver and raised in Arvada. 
+                    I came to Northern Colorado in 1990 and earned a Bachelor's in mathematics with an emphasis 
+                    in computer science. I have spent my entire career working on software development teams in a variety of roles. 
+                    Most recently, I have worked in product/program management and as a Scrum Master. 
+                    I would like to return to a more technical role and transition into Web development. 
+                    WebLab - A Web Development Boot Camp, FRCC has given me an exciting opportunity to do just that. 
 				</p>
 			<!--
 			<p><span class="bio">Janet</span>&nbsp;is a Colorado native.  She came to Northern Colorado in 1990. 
@@ -45,8 +45,7 @@ title: home
 			<h1>Key Projects</h1>
 			<ul class="projlist">
 				<li>
-					The Kitchen Website
-					<br/>
+					The Kitchen Website<br/>
 					<p class="projdesc"> 
 						This five page site uses HTML5 and CSS3 to demonstrate the use of HTML forms, a Google form, 
 						an embedded Google map, tables, iframes, @media for responsive design and a small amount of jQuery.
