--- a/playground/hangman.html
+++ b/playground/hangman.html
@@ -1,5 +1,3 @@
----
----
 <html>
 <head>
     <meta charset="utf-8">
@@ -7,7 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{{ page.title }}</title>
+    <title>Hang Man</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../public/css/bootstrap.css" rel="stylesheet">
@@ -20,7 +18,6 @@
     
     <script src="../public/js/jquery-1.10.2.js"></script>
     <script src="../public/js/bootstrap.js"></script>
-    <script src="words.js"></script>
     <script src="hangman.js"></script>
     <style>
     
