made site fork usable by making links more relative

--- a/students/index.html
+++ b/students/index.html
@@ -16,7 +16,7 @@ title: Students
     <thead>
     <tr>
         <th>Name</th>
-        <th>Page</th>        
+        <th>Website</th>        
         <th>Github</th>
         <th>Twitter</th>
         <th>Linkedin</th>
